--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "php": "^7.2",
     "ext-curl": "*",
     "ext-json": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "guzzlehttp/guzzle": "^6.5.2 || ^7.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.4"
